@@ -551,3 +551,4 @@ DONE: Detect guard skill customizations in PRINCE.EXE. (Used in Illusions of Per
 	TODO: Should we add the guard skill options to the INI, the CFG, the replays, or the settings menu?
 FIXED: Don't draw the right edge of loose floors on the left side of a potion or sword.
 FIXED: A guard standing on a door top (with floor) should not become inactive.
+FIXED: Left jump (top-left) didn't work on some gamepads.
